refactor: 重複しているクラスをひとつに修正する